--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -27,6 +27,9 @@
 /*----------  Header  ----------*/
 @import "header/header";
 
+/*----------  Transparent Header  ----------*/
+@import "transparent-header/transparent-header";
+
 /*----------  Primary  ----------*/
 @import "primary/primary";
 
