--- a/sass/site/compatibility/woocommerce/woocommerce.scss
+++ b/sass/site/compatibility/woocommerce/woocommerce.scss
@@ -138,6 +138,7 @@ p.demo_store,
 	    	&:after,
 	    	&:before {
 				bottom: 100%;
+				bottom: calc( 100% - 1px );
 				left: auto;
 				right: 8px;
 				border: solid transparent;
@@ -158,9 +159,9 @@ p.demo_store,
 			&:before {
 				border-color: rgba(230, 230, 230, 0);
 				border-bottom-color: #E6E6E6;
-				border-width: 8px;
+				border-width: 9px;
 				margin-left: -5px;
-				right: 5px;
+				right: 4px;
 			}
 
            .product_list_widget {
