--- a/sass/site/compatibility/woocommerce/woocommerce.scss
+++ b/sass/site/compatibility/woocommerce/woocommerce.scss
@@ -223,42 +223,127 @@ p.demo_store,
 				}
 			}
         }
+
+        .cart-container {
+        	vertical-align: middle;
+        }
     }
 
 	.ast-cart-menu-wrap {
-		display: inline-block;
 		line-height: 1;
-		.count {
-			font-weight: bold;
-			position: relative;
-			display: inline-block;
-			vertical-align: middle;
-			text-align: center;
-			width: 2.1em;
-			height: 2.1em;
-			font-size: 0.860em;
-			line-height: 1.8;
-			border-radius: 0em 0em 0.3em 0.3em;
-			border-width: 2px;
-			border-style: solid;
+		width: 3em;
+		height: 3em;
+		position: relative;
+		overflow: hidden;
+		clear: left; 
+		float: left;
 
-    		&:after{
-				bottom: 100%;
-			    margin-bottom: 0;
-			    height: .8em;
-			    width: .8em;
-			    left: 50%;
-			    transform: translateX(-50%);
-			    top: -.6em;
-			    content: ' ';
-			    position: absolute;
-			    pointer-events: none;
-			    border-width: 2px;
-			    border-style: solid;
-			    border-top-left-radius: 10em;
-			    border-top-right-radius: 10em;
-			    border-bottom: 0;
-    		}
+		.count,
+		.cart-line-1,
+		.cart-line-2,
+		.cart-line-3,
+		.cart-wheel {
+			position: absolute;
+			background-color: #2CC3B5;
+		}
+
+		.cart-line-2:before,
+		.cart-line-2:after,
+		.cart-line-3:after,
+		.cart-wheel:after {
+			position: absolute;
+			content: "";
+			background-color: inherit;
+		}
+
+		.count {
+			font-size: .7em;
+			font-weight: bold;
+			color: #fff;
+			right: 0;
+			padding: 2px;
+			min-width: 1.5em;
+			min-height: 1.5em;
+			border-radius: 50%;
+			text-align: center;
+			border: 1px solid #2cc3b5;
+		}
+
+		.cart-line-1 {
+			width: 15%;
+			height: 7%;
+			left: 8%;
+			top: 25%;
+			transform: rotate(5deg);
+			border-bottom-left-radius: 35%;
+		}
+
+		.cart-line-2 {
+			width: 35%;
+			height: 7%;
+			left: 6%;
+			top: 40%;
+			-webkit-transform: rotate(80deg);
+			-moz-transform: rotate(80deg);
+			-ms-transform: rotate(80deg);
+			transform: rotate(80deg);
+		}
+
+		.cart-line-2:before {
+			width: 120%;
+			height: 100%;
+			left: 45%;
+			top: -280%;
+			transform: rotate(-80deg);
+		}
+
+		.cart-line-2:after {
+			width: 70%;
+			height: 100%;
+			left: 59%;
+			top: -670%;
+			transform: rotate(40deg); 
+			border-top-left-radius: 50%;
+			border-bottom-left-radius: 25%;
+		}
+
+		.cart-line-3 {
+			width: 30%;
+			height: 7%;
+			position: absolute;
+			left: 33%;
+			top: 45%;
+		}
+
+		.cart-line-3:after {
+			width: 124%;
+			height: 100%;
+			top: -150%;
+			left: -5%;
+			background-color: inherit;
+		}
+
+		.cart-wheel {
+			width: 12%;
+			height: 12%;
+			border-radius: 100%;
+			position: absolute;
+			left: 28%;
+			bottom: 20%;
+		}
+
+		.cart-wheel:after {
+			width: 100%;
+			height: 100%;
+			border-radius: 100%;
+			left: 200%;
+			bottom: 0;
+		}
+
+		&:hover {
+			.cart-line-3 {
+				top: 42%;
+			}
 		}
 	}
 
