--- a/assets/css/unminified/compatibility/woocommerce/woocommerce-layout.css
+++ b/assets/css/unminified/compatibility/woocommerce/woocommerce-layout.css
@@ -341,26 +341,31 @@
 
 .woocommerce.columns-2 ul.products li.product, .woocommerce-page.columns-2 ul.products li.product {
   width: 48.4%;
+  width: -webkit-calc(50% - 10px);
   width: calc(50% - 10px);
 }
 
 .woocommerce.columns-3 ul.products li.product, .woocommerce-page.columns-3 ul.products li.product {
   width: 31.2%;
+  width: -webkit-calc( 33.33% - 14px);
   width: calc( 33.33% - 14px);
 }
 
 .woocommerce.columns-4 ul.products li.product, .woocommerce-page.columns-4 ul.products li.product {
   width: 22.5%;
+  width: -webkit-calc( 25% - 15px);
   width: calc( 25% - 15px);
 }
 
 .woocommerce.columns-5 ul.products li.product, .woocommerce-page.columns-5 ul.products li.product {
   width: 17.5%;
+  width: -webkit-calc( 20% - 16px);
   width: calc( 20% - 16px);
 }
 
 .woocommerce.columns-6 ul.products li.product, .woocommerce-page.columns-6 ul.products li.product {
   width: 14%;
+  width: -webkit-calc( 16.66% - 17px);
   width: calc( 16.66% - 17px);
 }
 
@@ -370,6 +375,7 @@
   }
   .woocommerce.tablet-columns-2 ul.products li.product, .woocommerce-page.tablet-columns-2 ul.products li.product {
     width: 47.6%;
+    width: -webkit-calc(50% - 10px);
     width: calc(50% - 10px);
   }
   .woocommerce.tablet-columns-2 ul.products li.product:nth-child(2n), .woocommerce-page.tablet-columns-2 ul.products li.product:nth-child(2n) {
@@ -381,6 +387,7 @@
   }
   .woocommerce.tablet-columns-3 ul.products li.product, .woocommerce-page.tablet-columns-3 ul.products li.product {
     width: 30.2%;
+    width: -webkit-calc(33.33% - 14px);
     width: calc(33.33% - 14px);
   }
   .woocommerce.tablet-columns-3 ul.products li.product:nth-child(3n), .woocommerce-page.tablet-columns-3 ul.products li.product:nth-child(3n) {
@@ -392,6 +399,7 @@
   }
   .woocommerce.tablet-columns-4 ul.products li.product, .woocommerce-page.tablet-columns-4 ul.products li.product {
     width: 21.5%;
+    width: -webkit-calc(25% - 15px);
     width: calc(25% - 15px);
   }
   .woocommerce.tablet-columns-4 ul.products li.product:nth-child(4n), .woocommerce-page.tablet-columns-4 ul.products li.product:nth-child(4n) {
@@ -403,6 +411,7 @@
   }
   .woocommerce.tablet-columns-5 ul.products li.product, .woocommerce-page.tablet-columns-5 ul.products li.product {
     width: 16.2%;
+    width: -webkit-calc(20% - 16px);
     width: calc(20% - 16px);
   }
   .woocommerce.tablet-columns-5 ul.products li.product:nth-child(5n), .woocommerce-page.tablet-columns-5 ul.products li.product:nth-child(5n) {
@@ -414,6 +423,7 @@
   }
   .woocommerce.tablet-columns-6 ul.products li.product, .woocommerce-page.tablet-columns-6 ul.products li.product {
     width: 12.7%;
+    width: -webkit-calc(16.66% - 17px);
     width: calc(16.66% - 17px);
   }
   .woocommerce.tablet-columns-6 ul.products li.product:nth-child(6n), .woocommerce-page.tablet-columns-6 ul.products li.product:nth-child(6n) {
@@ -431,6 +441,7 @@
   }
   .woocommerce.mobile-columns-2 ul.products li.product, .woocommerce-page.mobile-columns-2 ul.products li.product {
     width: 46.1%;
+    width: -webkit-calc(50% - 10px);
     width: calc(50% - 10px);
   }
   .woocommerce.mobile-columns-2 ul.products li.product:nth-child(2n), .woocommerce-page.mobile-columns-2 ul.products li.product:nth-child(2n) {
@@ -442,6 +453,7 @@
   }
   .woocommerce.mobile-columns-3 ul.products li.product, .woocommerce-page.mobile-columns-3 ul.products li.product {
     width: 28.2%;
+    width: -webkit-calc(33.33% - 14px);
     width: calc(33.33% - 14px);
   }
   .woocommerce.mobile-columns-3 ul.products li.product:nth-child(3n), .woocommerce-page.mobile-columns-3 ul.products li.product:nth-child(3n) {
@@ -453,6 +465,7 @@
   }
   .woocommerce.mobile-columns-4 ul.products li.product, .woocommerce-page.mobile-columns-4 ul.products li.product {
     width: 19%;
+    width: -webkit-calc(25% - 15px);
     width: calc(25% - 15px);
   }
   .woocommerce.mobile-columns-4 ul.products li.product:nth-child(4n), .woocommerce-page.mobile-columns-4 ul.products li.product:nth-child(4n) {
@@ -464,6 +477,7 @@
   }
   .woocommerce.mobile-columns-5 ul.products li.product, .woocommerce-page.mobile-columns-5 ul.products li.product {
     width: 13%;
+    width: -webkit-calc(20% - 16px);
     width: calc(20% - 16px);
   }
   .woocommerce.mobile-columns-5 ul.products li.product:nth-child(5n), .woocommerce-page.mobile-columns-5 ul.products li.product:nth-child(5n) {
@@ -475,6 +489,7 @@
   }
   .woocommerce.mobile-columns-6 ul.products li.product, .woocommerce-page.mobile-columns-6 ul.products li.product {
     width: 10.2%;
+    width: -webkit-calc(16.66% - 17px);
     width: calc(16.66% - 17px);
   }
   .woocommerce.mobile-columns-6 ul.products li.product:nth-child(6n), .woocommerce-page.mobile-columns-6 ul.products li.product:nth-child(6n) {
@@ -679,6 +694,8 @@
 }
 
 .woocommerce form .form-row .input-text, .woocommerce-page form .form-row .input-text {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
   width: 100%;
 }
