--- a/sass/site/compatibility/woocommerce/woocommerce.scss
+++ b/sass/site/compatibility/woocommerce/woocommerce.scss
@@ -229,6 +229,11 @@ p.demo_store,
         }
     }
 
+    .ast-site-header-cart-li {
+		display: inline-block;
+		vertical-align: middle;
+    }
+
 	.ast-cart-menu-wrap {
 		line-height: 1;
 		width: 3em;
